# PlantDaddy-Frontend

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
app/: main.py
backend/: .env  README.md  main.py  package-lock.json  package.json  pyproject.toml
backend/app/: api.py  controls.py  models.py
frontend/: package-lock.json
frontend/src/: App.js  client.js  config.js
src/: App.js  App.tsx  ThirstyPlants.tsx
src/components/: Header.css  Header.tsx  Home.tsx  PlantDetail.tsx  PlantInList.css  PlantInList.tsx  PlantList.css  PlantList.tsx  ThirstyPlants.tsx
src/models/: Plant.ts
src/services/: PlantDaddyService.ts
