[tool.poetry]
name = "backend"
version = "0.1.0"
description = "manage plants by assigning attributes; built with modern, typed python"
authors = ["Ethan Cloin <dev.ethancloin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"

[tool.poetry.scripts]
start-server = "backend.app.controls:start_server"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
